--- a/css/style.css
+++ b/css/style.css
@@ -630,6 +630,12 @@ span.single-timeline-horizontal {
     font-size: 20px; 
 }
 
+.badge {
+    background-color: rgba(81,210,255, 0.4);
+    font-weight: 400;
+    color: #555;
+}
+
 /* ---- .tab ---- */
 .tab{
     overflow: hidden;
@@ -645,17 +651,19 @@ span.single-timeline-horizontal {
     cursor: pointer;
     padding: 3px 10px 3px 10px;
     transition: 0.3s;
-    color: #51d2ff;
+    color: #888;
+    /*color: #51d2ff;*/
 }
 
 .tab button:hover{
-    background-color: #ddd;
-    color: #16c3ff;
+    background-color: rgba(81,210,255, 0.6);
+    /*background-color: #ddd;*/
+    color: #333;
 }
 
 .tab button.active {
-  background-color: #ccc;
-  color: #16c3ff;
+  background-color: rgba(81,210,255, 0.6);
+  color: #333;
 }
 
 .tabcontent{
