create about_me page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,16 +21,22 @@
 
 }/*max-width:1024px*/
 
-@media screen and (max-width:1008px){
+@media screen and (max-width:768px){
+	nav.navbar.bootsnav ul.nav > li > a { padding: 15px 8px;}
+	nav.navbar.bootsnav .navbar-toggle {display: inline-block; float: right;margin-right: 0;margin-top: 21px;}
+}
+
+@media screen and (max-width:576px){
 	nav.navbar.bootsnav ul.nav > li.dropdown span.megamenu-title  {display:block;color: #43465d;font-size: 18px;}
+	
 	nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li .megamenu-sub-title a {margin-top: 20px;font-size: 14px;}
 	nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li .megamenu-sub-txt a{margin-bottom: 15px;}
 
 }/*max-width:1008px*/
 
-@media screen and (max-width:992px){
-	nav.navbar.bootsnav .navbar-collapse.collapse.in {padding-bottom: 30px;}
-	nav.navbar.bootsnav .navbar-toggle {display: inline-block; float: right;margin-right: 0;margin-top: 21px;}
+@media screen and (max-width:576px){
+	nav.navbar.bootsnav .navbar-collapse.collapse.in {padding-bottom: 10px;}
+	
 	nav.navbar.bootsnav .navbar-brand {float: left!important;}
 	nav.navbar.bootsnav ul.nav > li > a {padding: 15px 0px;border: transparent;}
 }/*max-width:992px*/
