--- a/css/style_about.css
+++ b/css/style_about.css
@@ -96,6 +96,10 @@ html,body{
 }
 
 .fix{position: relative;clear: both;}
+
+.row {
+    margin-left: 0 !important;
+}
 /*=============Style css=========*/
 
 /*-------------------------------------
@@ -255,8 +259,21 @@ nav.navbar.bootsnav .navbar-toggle i{color: #51d2ff;}
 /*-------------------------------------
         4.  About
 --------------------------------------*/
-.about {padding: 50px 0 50px;}
-.about-content {padding-top: 40px;}
+
+#about {
+    display: block;
+}
+
+.section-heading h2 {
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #e5ebf2;
+}
+
+.about {padding: 30px;}
+.about-content {padding-top: 0px;}
 /*.single-about-txt*/
 .single-about-txt h3 {
     font-size:18px;
@@ -350,10 +367,10 @@ nav.navbar.bootsnav .navbar-toggle i{color: #51d2ff;}
 
 .education {
     background:  #f9fbfd;
-    padding-top:  50px;
+    padding-bottom:  30px;
 }
 .education-horizontal-timeline {
-    padding: 80px 0;
+    padding: 40px 20px;
 }
 
 /*.education-horizontal-timeline*/
@@ -394,13 +411,7 @@ span.single-timeline-horizontal {
 }
 .skill-content{padding: 50px 0 80px;}
 .single-skill-content{padding-top: 40px;}
-.section-heading h2 {
-    font-size: 24px;
-    font-weight: 600;
-    text-transform: uppercase;
-    padding-bottom: 50px;
-    border-bottom: 1px solid #e5ebf2;
-}
+
 .single-progress-txt {
     display: flex;
 }
@@ -639,7 +650,9 @@ span.single-timeline-horizontal {
 
 /* ---- .tab ---- */
 .tab{
-    padding: 10px 0;
+    /*position: fixed;*/
+    /*margin-top: 90px;*/
+    padding: 20px 0;
     overflow: hidden;
     border: none;
     text-align: center;
@@ -651,7 +664,7 @@ span.single-timeline-horizontal {
     outline: none;
     border: none;
     cursor: pointer;
-    padding: 3px 10px 3px 10px;
+    padding: 3px 20px;
     transition: 0.3s;
     color: #888;
     /*color: #51d2ff;*/
@@ -837,8 +850,8 @@ span.single-timeline-horizontal {
 /*-------------------------------------
         10.  Publication
 --------------------------------------*/
-.publication {padding: 50px 0 50px;}
-.publication-content {padding-top: 30px;}
+.publication {padding: 30px;}
+.publication-content {padding-top: 0px;}
 /*.single-about-txt*/
 .single-about-txt2 h3 {
     padding-top: 20px;
@@ -886,9 +899,9 @@ span.single-timeline-horizontal {
 --------------------------------------*/
 .contact {
     background: #f9fbfd;
-    padding: 50px 0 0px;
+    padding: 30px 0 0 0;
 }
-.single-contact-box {padding-top: 40px;}
+.single-contact-box {padding-top: 30px;}
 .contact-form  .form-group {
     margin-bottom: 20px;
     
