--- a/css/style.css
+++ b/css/style.css
@@ -252,11 +252,37 @@ nav.navbar.bootsnav .navbar-toggle i{color: #51d2ff;}
 .header-text a:hover{ box-shadow: 0 5px 20px rgba(0,0,0,.4);background:#16c3ff;border: 1px solid #16c3ff;}
 /*.header-text-area*/
 
+.header-text2 h2 {
+    font-size: 44px;
+    /*font-size: 3em;*/
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.5;
+}
+
+.header-text2 h2 span {color: #63BBFF;}
+
+.header-text2 h3 {
+    font-size: 26px;
+    color: #63BBFF;
+    text-transform: capitalize;
+    line-height: 1.3;
+}
+
+.header-text2 p {
+    /*color: #fff;*/
+    font-size: 18px;
+    font-weight: 300;
+    /*text-transform: uppercase;*/
+    margin: 30px 0 60px;
+    letter-spacing: 1px;
+}
+
 /*-------------------------------------
         4.  About
 --------------------------------------*/
-.about {padding: 50px 0 50px;}
-.about-content {padding-top: 40px;}
+.about {padding: 150px 0 50px;}
+.about-content {padding-top: 40px; padding-left: 50px;}
 /*.single-about-txt*/
 .single-about-txt h3 {
     font-size:18px;
