--- a/css/style_about.css
+++ b/css/style_about.css
@@ -1068,4 +1068,137 @@ span.single-timeline-horizontal {
     0%   {bottom:0px;}
     100%  {bottom:7px;}
 }
+
+/*-------------------------------------
+        Interest
+--------------------------------------*/
+
+.interest {
+    margin-top: 30px;
+}
+
+.row {
+    margin: 20px 0 ;
+}
+
+.interest .topic {
+
+}
+
+.interest h3 {
+    font-size: 2rem;
+}
+
+.interest p {
+    font-size: 1.4rem;
+    /*text-align: center;*/
+    margin-top: 20px;
+    /*margin-right: 100px;*/
+}
+
+/*-------------------------------------
+        Slideshow / Carousel
+--------------------------------------*/
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  align-items: center;
+  text-align: center;
+}
+
+/* Hide the images by default */
+.mySlides, .mySlides2, .mySlides3, .mySlides4 {
+  display: none;
+  align-items: center;
+}
+
+.mySlides img, .mySlides2 img, .mySlides3 img, .mySlides4 img {
+    max-height: 300px;
+    /*width:100%; */
+    /*height: 400px;*/
+}
+
+@media screen and (max-width:768px){
+    .mySlides img, .mySlides2 img, .mySlides3 img, .mySlides4 img {
+        /*width:100%; */
+        max-height: 300px;
+    }
+}
+
+
+/* Next & previous buttons */
+.prev, .next {
+  background-color: rgba(0,0,0,0.3);
+  cursor: pointer;
+  position: absolute;
+  top: 45%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.prev {
+    left: 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  padding: 16px !important;
+}
+
+/* Caption text */
+.text {
+  color: #333;
+  font-size: 1.3rem;
+  padding: 8px 12px;
+  /*position: absolute;*/
+  bottom: -20px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #888;
+  font-size: 1.2rem;
+  padding: 1px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot, .dot2, .dot3, .dot4 {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.slide_active, .dot:hover, .dot2:hover, .dot3:hover, .dot4:hover {
+  background-color: #717171;
+}
+
+
+
 /*========================Thank you=================
